# RegLens_HK

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  pytest.ini
.cursor/rules/: lawtrace.mdc
artifacts/: reglens-hk-repo.txt  reglens-hk-repo.xml
docs/: ARCHITECTURE.md  ASSUMPTIONS.md  BACKUP_RESTORE.md  CORE10_OPERATIONS.md  CORRECTIONS.md  CRAWL_POLICY.md  DATABASE_MIGRATIONS.md  EDITORIAL_HANDBOOK.md  EVALUATION.md  EXCLUSIONS.md  EXTRACTION_EVALUATION.md  EXTRACTION_SCHEMA.md  GITHUB_PAGES.md  LAWTRACE_AGENT_STARTUP.md  LAWTRACE_MVP.md  LAWTRACE_OPERATIONS.md  LAWTRACE_RELEASE_CHECKLIST.md  LLM_PROCESSING.md  LOCAL_SETUP.md  MILESTONES.md  MVP_BACKBONE.md  OBSERVATORY.md  OCR.md  OPERATIONS.md  PRD.md  PRIVATE_DATA.md  PRODUCT_POSITIONING.md  PUBLICATION_RELEASES.md  README.md  REAL_CORPUS_PILOT.md  RESEARCH_COLLECTIONS.md  REVIEW_WORKFLOW.md  RISKS.md  SCHEMA.md  SOURCE_ADAPTERS.md  SOURCE_LICENSING_AUDIT.md  SOURCE_SYNC.md  STUDIO.md  TAXONOMY.md  THREAT_MODEL.md  (+1 more)
scripts/: check_fixtures.py  check_public_release.py  core10_report.py  download_checklist.md  hash_manifest.py  lawtrace_doctor.py  lawtrace_open.sh  lawtrace_static_server.py  lawtrace_stop.sh  postgres_demo_pipeline.py
tests/: test_jobs_file.py  test_jobs_postgres.py  test_m1_pipeline.py  test_migrations_unit.py  test_mvp_rc1.py  test_objectstore_local.py  test_rc4_public_pages.py  test_rc4_research_routes.py  test_release_equivalence.py  test_site_static.py  test_studio_paths.py
(+427 files in other folders)
