[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reglens-worker"
version = "0.2.0"
description = "RegLens HK document worker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pypdf>=4.0.0,<6",
  "beautifulsoup4>=4.12.0,<5",
  "lxml>=5.0.0,<6",
  "jsonschema>=4.20.0,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9",
  "ruff>=0.6.0,<1",
  "mypy>=1.11.0,<2",
  "types-beautifulsoup4",
]

[tool.setuptools.packages.find]
where = ["services/worker"]
include = ["reglens_worker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["services/worker"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["services/worker", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
packages = ["reglens_worker"]
mypy_path = "services/worker"
ignore_missing_imports = true
warn_unused_ignores = true
check_untyped_defs = true
